deployment/overlays/feat-ci/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-ui
spec:
  spec:
    containers:
      - name: banking-ui
---
