deployment/overlays/feat-ci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-ui
  labels:
    app.kubernetes.io/instance: banking-ui-feat-ci
    app.kubernetes.io/version: banking-ui-2.3.0
---
